[package]
name = "vibi"
version = "0.1.0"
authors = ["Nick Sanders <nsan1129@gmail.com>"]

[dependencies.bismit]
# path = "/home/nick/projects/bismit"
git = "https://github.com/cogciprocate/bismit.git"

[dependencies.enamel]
# path = "/home/nick/projects/enamel"
git = "https://github.com/cogciprocate/enamel.git"

[dependencies.time]
git = "https://github.com/rust-lang/time.git"

# [dependencies.glium_text]
# git = "https://github.com/tomaka/glium_text.git"

# [dependencies.glium]
# git = "https://github.com/tomaka/glium.git"

[dependencies]
rand = "*"
glium = "0.13"
glium_text = "0.8"
image = "*"
find_folder = "*"
num = "*"
#vecmath = "*"
rustc-serialize = "*"
colorify = "*"

# piston_window = "*"
# piston2d-opengl_graphics = "*"
# conrod = "0.23"
# piston = "0.16.0"
# pistoncore-glutin_window = "0.20.0"
# piston-viewport = "0.2.0"
# piston2d-gfx_graphics = "0.13.0"
# gfx = "0.8.1"
# cgmath = "*"

